# rai-lint

./: .env.example  .eslintrc.json  .eslintrc.json.bak  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_UPDATE.md  LATEST_VERSIONS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  commitlint.config.js  eslint.config.js  lefthook.yml  package-lock.json  package.json  pyproject.toml  rai-lint.code-workspace  release-please-config.json  setup.sh  sonar-project.properties  ttd.tmp
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-licenses.py  inject-wheel-sbom.py
.github/skills/changelog-writer/: SKILL.md
.github/workflows/: ci.yml  dependency-review.yml  lockfile-refresh.yml  quality.yml  release-please.yml  release.yml  security-audit.yml  test-and-build.yml
.kiro/specs/v0-5-0-release-preparation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benchmarks/: node-benchmark.test.ts  python_benchmark.py
docs/: api-reference.md  architecture.md  deployment.md  development.md  installation.md  troubleshooting.md  usage.md
examples/: .gitlint.strict  .pre-commit-config-full.yaml  .pre-commit-config.yaml  commitlint.config.strict.js  commitlint.config.warning.js  lefthook-full.yml
fixtures/: commit-messages.ts  commit_messages.py
