[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmark-rai-lint"
version = "0.1.0"
description = "Dual-language commit-message validation framework for AI-responsible development"
requires-python = ">=3.10,<3.13"
keywords = ["gitlint", "commitlint", "rai", "ai-attribution", "commit-validation", "git-hooks"]
license = {text = "Polyform Shield 1.0.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["packages/python-gitlint/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
